# A2A-CLI

./: .gitignore  README.md  pyproject.toml
src/a2a_check/: __init__.py  card_service.py  cli.py  config.py  http_client.py  jsonrpc_client.py  models.py  reporter.py  ui_server.py  util.py
src/a2a_check/checks/: base.py  card_checks.py  jsonrpc_checks.py  rest_checks.py
src/a2a_check/helloworld/: __main__.py
src/a2a_check/suites/: all.py
src/a2a_check/ui_static/: index.html
src/a2a_check/ui_static/assets/: index-Ddj0Te8z.js
